Adapt to GSettings API break

The API for setting and retrieving string arrays was changed, so all
calls to g_settings_set_strv()/g_settings_get_strv() need adjusting.

https://bugzilla.gnome.org/show_bug.cgi?id=620554